     * --headertext for using custom text string in image header section
 - Add legend to hourly output image
 - Document keyword value ranges in configuration file man page
 - Import Makefile improvements from OpenBSD
   (pull requests by Jasper Lievisse Adriaanse)
 - Automatic interface bandwidth detection, BandwidthDetection in config
 - JSON output (--json)


1.12 / 30-Aug-14

 - Fix: Memory allocation when zero interfaces are available, also lo needed
   to be missing in order to trigger this leak
 - Fix: Rebuild total indexing (thanks to William Epp for reporting this)
 - Fix: Some error situations could leave database file open until the end
   of command execution
 - Fix: Live traffic meter occasionally showing higher minimum than average
   in end statistics (Debian Bug #687812)
 - Fix: Setting locale when none is specified in config (Debian Bug #606397)
 - Fix: Cppcheck findings (may fix Debian Bug #692330)
 - Improve traffic meter output accuracy
 - Add tests and debug compilation target
 - Remove use of -D parameter in Makefile install commands in order to
   improve cross-compilation support
 - Set CFLAGS in Makefiles only when not already defined
 - Add support for database import from text file (--importdb)
   (based on patch by Tilmann Bubeck)
 - Rename --dumpdb to --exportdb
 - Add example systemd service file
 - Add example launchd plist file for OS X
 - Use ISO YYYY-MM-DD date format timestamps if logfile is used
 - Improve daemon startup prints
 - Add parameters for changing daemon process user and group
 - Add example upstart job configuration file (thanks to Cameron Norman)
 - Create database, pid and log dirs during daemon startup if necessary
 - Update ownership of database, log and pid files if needed during daemon
   startup if started as root and configured to change process user and group
 - Remove cron update related example files and documentation, the cron
   update method should be considered as deprecated